fixed collapsing divs

--- a/public/scss/layout/home/_home-card.scss
+++ b/public/scss/layout/home/_home-card.scss
@@ -1,5 +1,6 @@
 
 #home .card-center {
+
 	@include tablet {
 		width: 90%;
 		margin: 0 auto;
@@ -33,7 +34,7 @@
 
 
 .home-container .picture-wrap {
-	height: 100%;
+	// height: 100%;
 	background-color: $google-gray;
 
 	@include tablet { 
@@ -58,9 +59,7 @@
 }
 
 .home-container .content-wrapper {
-	padding: 5%;
 	background-color: $white;
-	height: 100%;
 
 	@include tablet {
 		min-width: 260px; // so btn does not collapse
@@ -70,6 +69,7 @@
 
 .home-container .content {
 	height: 100%;
+	padding: $mlg;
 	p {
 		padding: $med 0;
 		line-height: 1.7; 
